2.0b8:
	Fix memory leak (Hajimu Umemoto)
2.0b7:
	Split installation targets (Elrond)
	nroff man pages (Fredrik Pettai & Martin Paul)
	Updated contributors list in man pages
2.0b6:
	Fix timing bug for messages arriving on greylist timeout (Martin Paul)
	Install formatted man page that can be displayed on Solaris
2.0b5:
	Missing bits from the 2.0b4 fix
2.0b4:
	Fix MX sync bug on Solaris, shut up warnings at build time
2.0b3:
	Add extendedregex option for using extended regex (Matt Kettler)
	Updated .spec file for running without root privs (Ivan F. Martinez)
	rc-redhat.sh: move PID file somewhere we can write (Petr Kristof)
	Fix build problem with spf
	Fix bad DESTDIR specification for /etc/mail
	Change e-mail matching scheme to exact match instead of substring match
2.0b2:
	Check if -D_REENTRANT is needed for localtime_r and friends
	Typo in delayedreject 
	Check for initgroups existence
	Add more E-bay addresses in greylist.conf
	Drop \ for multi-line ACL as it break builds with some version of yacc
2.0b1:
	Shut down warnings in tolower()
	Use initgroups() on startup to kill suplementary groups
	Fix build problem on IPv6 disabled systems.
	Fix build problem with libpsf
	Fix rc-redhat startup order, drop root before starting the daemon
	Updated .spec file (Ivan F. Martinez)
1.7.5:
	Documentation fixes (Gary Aitken, Per Holm)
	New broken site in the default whitelist
	Generate .spec file from configure
	Differentiate errors in dump file and config file
	Fix a build problem if getaddrinfo is absent (Lev Walkin)
	Don't sync with local addresses on FreeBSD 4.9 (Lev Walkin)
	Add a commented line for ::1 whitelisting in greylist.conf
	Delayed reject to cope better with sender callback (Moritz Both)
1.7.4:
	M4 file for easier sendmail.cf generation (Ivan F. Martinez)
	.spec file for generating RPM (Ivan F. Martinez)
	Install ${DESTDIR}etc/mail for sandbox builds
	Fix build problem
1.7.3:
	SUSe startup script, by Stephane Lentz
	Builds again with SPF enabled