@@ -1,4 +1,4 @@
-# $Id: milter-greylist.spec.in,v 1.3 2005/03/17 20:31:51 manu Exp $
+# $Id: milter-greylist.spec.in,v 1.4 2005/05/11 19:57:45 manu Exp $
 # Contributed by Ivan F. Martinez
 %define ver @PACKAGE_VERSION@
 %define rel 1
@@ -14,9 +14,9 @@ Source0: ftp://ftp.espci.fr/pub/milter-greylist/%{name}-%{version}.tgz
 URL: http://hcpnet.free.fr/milter-greylist/
 BuildRoot: %{_tmppath}/%{name}-%{version}-root-%(%{__id_u} -n)
 
-Requires: sendmail >= 8.12
-Requires: sendmail-cf >= 8.12
-BuildRequires: sendmail-devel >= 8.12
+Requires: sendmail >= 8.11
+Requires: sendmail-cf >= 8.11
+BuildRequires: sendmail-devel >= 8.11
 BuildRequires: flex
 BuildRequires: bison
 
